<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

<!--    <item-->
<!--        android:id="@+id/navigation_home"-->
<!--        android:title="@string/home"-->
<!--        android:icon="@drawable/home" />-->

    <item
        android:id="@+id/navigation_explore"
        android:title="@string/explore"
        android:icon="@drawable/home" />
    <item
        android:id="@+id/navigation_posts"
        android:title="@string/posts"
        android:icon="@drawable/new_post"/>
    <item
        android:id="@+id/navigation_update"
        android:title="@string/update"
        android:icon="@drawable/update"/>

    <item
        android:id="@+id/navigation_upload"
        android:title="@string/upload"
        android:icon="@drawable/upload" />

</menu>