<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/submit_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".UploadContent">

    <!--    <TextView-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="@string/Upload_page"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintLeft_toLeftOf="parent"-->
    <!--        app:layout_constraintRight_toRightOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->

    <!--    Bottom Navigation Bar-->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bottom_navigation_background"
        android:elevation="8dp"
        app:itemIconTint="@drawable/bottom_navigation_color_selector"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_navigation_menu"
        tools:targetApi="lollipop" />

    <androidx.cardview.widget.CardView
        android:layout_width="320dp"
        android:layout_height="533dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="15dp"
            android:text="@string/post_new_content"
            android:textColor="@color/slateblue"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/titleEditText"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edittxtbackground"
                android:fontFamily="@font/roboto"
                android:hint="@string/title"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="#7C000000"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/contentEditText"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edittxtbackground"
                android:hint="@string/content"
                android:inputType="textLongMessage"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="#7C000000"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/authorEditText"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edittxtbackground"
                android:hint="@string/author"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="#7C000000"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edittxtbackground"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="#7C000000"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/authorUploadPhoto"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edittxtbackground"
                android:hint="@string/author_photo"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="#7C000000"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/contentImage"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edittxtbackground"
                android:hint="@string/content_image"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="#7C000000"
                android:textSize="12sp" />

            <Button
                android:id="@+id/mButton"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/upload" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>