<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="horizontal"
    tools:context=".ExploreScreen">

    <!--    Bottom Navigation Bar-->

    <!--    <com.google.android.material.bottomnavigation.BottomNavigationView-->
    <!--        android:id="@+id/bottom_navigation"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_alignParentBottom="true"-->
    <!--        android:layout_marginLeft="8dp"-->
    <!--        android:layout_marginRight="8dp"-->
    <!--        android:layout_marginBottom="16dp"-->
    <!--        android:background="@drawable/bottom_navigation_background"-->
    <!--        android:elevation="8dp"-->
    <!--        app:itemIconTint="@drawable/bottom_navigation_color_selector"-->
    <!--        app:labelVisibilityMode="labeled"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.0"-->
    <!--        app:layout_constraintLeft_toLeftOf="parent"-->
    <!--        app:layout_constraintRight_toRightOf="parent"-->
    <!--        app:menu="@menu/bottom_navigation_menu"-->
    <!--        tools:targetApi="lollipop" />-->

    <!--    android:layout_above="@+id/bottom_navigation"-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="15dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/articles_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/content_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:paddingLeft="15dp"
                android:paddingBottom="5dp"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/content"
                android:layout_width="333dp"
                android:layout_height="82dp"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/roboto_thin"
                android:gravity="center"
                android:paddingTop="15dp"
                android:text="@string/sample_content"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/article_author"
                android:layout_width="349dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:fontFamily="@font/roboto_bold"
                android:gravity="right"
                android:padding="3dp"
                android:text="@string/content_author"
                android:textColor="@color/slateblue"
                android:textSize="12sp" />


            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/author_profile"
                android:layout_width="52dp"
                android:layout_height="44dp"
                android:paddingBottom="5dp"
                android:scaleType="fitCenter"
                android:src="@drawable/profilepic"
                app:riv_border_color="@color/slateblue"
                app:riv_border_width="1dip"
                app:riv_corner_radius="30dip"
                app:riv_mutate_background="true"
                app:riv_oval="true"
                app:riv_tile_mode="repeat" />


        </androidx.cardview.widget.CardView>
    </LinearLayout>

</LinearLayout>